--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -10,7 +10,7 @@
   ],
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#fff",
+    "navigationBarBackgroundColor": "#ffb",
     "navigationBarTitleText": "西南大学校历",
     "navigationBarTextStyle": "black"
   },
