--- a/project.config.json
+++ b/project.config.json
@@ -23,7 +23,7 @@
   "simulatorPluginLibVersion": {},
   "condition": {},
   "srcMiniprogramRoot": "miniprogram/",
-  "appid": "wx34ed2f6ebd145dbd",
+  "appid": "wx0da7d7cfe1626653",
   "libVersion": "2.30.0",
   "editorSetting": {
     "tabIndent": "insertSpaces",
